macros/tests/ui/gprogram_fails_to_parse_program_impl.stderr
error: Failed to parse program impl: expected `impl`
 --> tests/ui/gprogram_fails_to_parse_program_impl.rs:4:1
  |
4 | struct MyProgram;
  | ^^^^^^
